--- a/src/scss/modules/_grid.scss
+++ b/src/scss/modules/_grid.scss
@@ -5,7 +5,7 @@
 @import "bootstrap-rewrite/mixins/grid-framework";
 
 @mixin media-tablet() {
-  @include media-breakpoint-down(md) {
+  @include media-breakpoint-down(sm) {
     @content;
   }
 }
