--- a/src/scss/settings/_settings.scss
+++ b/src/scss/settings/_settings.scss
@@ -1,4 +1,4 @@
-$percent-root-font-size: 62.5 !default;
+$percent-root-font-size: 62.5 !default; // so 1.6rem == 16px
 $img-dir: "../img";
 $base-spacer: 8 !default;
 // les polices sont importées par google api.
