--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -7,6 +7,7 @@
   --qc-font-family-content: var(--qc-font-family-open-sans);
   --qc-font-family-header: var(--qc-font-family-roboto);
   --qc-font-family-code: var(--qc-font-family-roboto-mono);
+  --qc-font-size-root-percent: 62.5%;
   --qc-font-size-h6: 1.6rem;
   --qc-font-size-h5: 1.9rem;
   --qc-font-size-h4: 2.1rem;
@@ -221,7 +222,7 @@ select {
   }
 }
 :root {
-  font-size: 62.5%;
+  font-size: var(--qc-font-size-root-percent);
 }
 
 body {
