--- a/src/scss/settings/_settings.scss
+++ b/src/scss/settings/_settings.scss
@@ -1,8 +1,7 @@
 $percent-root-font-size: 62.5 !default; // so 1.6rem == 16px
 $img-dir: "../img";
 $base-spacer: 8 !default;
-// les polices sont importées par google api.
-// pour un hébergement local, cf https://google-webfonts-helper.herokuapp.com/fonts
+// for local fonts, cf https://google-webfonts-helper.herokuapp.com/fonts
 $google-api-font: true !default;
 $google-fonts : (
   roboto: (Roboto, sans-serif),
