Modification de la version + corrections/ajustements textuels dans la doc incluse + ajout auto de la version dans la doc incluse.

--- a/doc/scss/_tables.scss
+++ b/doc/scss/_tables.scss
@@ -1,5 +1,5 @@
-@use "modules/utils" as *;
-@use "modules/tokens" as *;
+@use "../../src/scss/modules/utils" as *;
+@use "../../src/scss/modules/tokens" as *;
 
 table.qc-table {
   margin-bottom: 0;
