--- a/doc/scss/components/_button.scss
+++ b/doc/scss/components/_button.scss
@@ -1,8 +1,8 @@
-@use "settings/settings" as *;
-@use "functions/utils" as *;
-@use "modules/tokens" as *;
-@use "modules/utils" as *;
-@use "base/shadings" as *;
+@use "../../../src/scss/settings/settings" as *;
+@use "../../../src/scss/functions/utils" as *;
+@use "../../../src/scss/modules/tokens" as *;
+@use "../../../src/scss/modules/utils" as *;
+@use "../../../src/scss/base/shadings" as *;
 
 @mixin button-border-and-padding($border-size, $padding-y, $padding-x) {
   padding: calc(#{token-value(spacer $padding-y)} - #{$border-size}) calc(#{token-value(spacer $padding-x)} - #{$border-size});
