--- a/doc/scss/components/_code.scss
+++ b/doc/scss/components/_code.scss
@@ -1,7 +1,7 @@
-@use "settings/settings" as *;
-@use "functions/utils" as *;
-@use "modules/tokens" as *;
-@use "modules/utils" as *;
+@use "../../../src/scss/settings/settings" as *;
+@use "../../../src/scss/functions/utils" as *;
+@use "../../../src/scss/modules/tokens" as *;
+@use "../../../src/scss/modules/utils" as *;
 
 qc-code {
   display: block;
